--- a/OneDrive/Desktop/Aplicaciones Moviles/HealthFit/src/app/components/footer/footer.component.html
+++ b/OneDrive/Desktop/Aplicaciones Moviles/HealthFit/src/app/components/footer/footer.component.html
@@ -1,6 +1,5 @@
-
 <ion-footer [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Footer</ion-title>
+  <ion-toolbar class="animated-footer custom-content">
+    <ion-title> ¡No olvides tomar agua!😊🥛👍</ion-title>
   </ion-toolbar>
 </ion-footer>
