--- a/OneDrive/Desktop/Aplicaciones Moviles/HealthFit/src/app/components/menu/menu.component.html
+++ b/OneDrive/Desktop/Aplicaciones Moviles/HealthFit/src/app/components/menu/menu.component.html
@@ -1,21 +1,21 @@
 <ion-menu contentId="main-content">
-  <ion-header>
-    <ion-toolbar>
+  <ion-header >
+    <ion-toolbar class="barra-menu">
       <ion-title>Menu</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-content color="light" class="ion-padding">
+  <ion-content class="ion-padding custom-content">
     <div>
       <ion-list>
         <ion-item>
-          <ion-label color="success" routerLink="/inicio">Inicio</ion-label>
+          <ion-label class="label" routerLink="/inicio">Inicio 🏠</ion-label>
         </ion-item>
       </ion-list>
     </div>
     <div>
       <ion-list>
         <ion-item>
-          <ion-label color="success" routerLink="/tu-cuerpo">Tu cuerpo</ion-label>
+          <ion-label class="label" routerLink="/tu-cuerpo">Tu cuerpo 💪🏻</ion-label>
         </ion-item>
       </ion-list>
     </div>
@@ -23,14 +23,14 @@
       
       <ion-list>
         <ion-item>
-          <ion-label color="success"  routerLink="/entrenamiento">Entrenamiento</ion-label>
+          <ion-label class="label"  routerLink="/entrenamiento">Entrenamiento 👟</ion-label>
         </ion-item>
       </ion-list>
     </div>
     <div>
       <ion-list>
         <ion-item>
-          <ion-label color="success"  routerLink="/recetas">Recetas</ion-label>
+          <ion-label class="label"  routerLink="/recetas">Recetas 🥗</ion-label>
         </ion-item>
       </ion-list>
     </div>
@@ -38,11 +38,11 @@
 </ion-menu>
 <div class="ion-page" id="main-content">
   <ion-header>
-    <ion-toolbar>
+    <ion-toolbar class="barra-menu">
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      <ion-title>HealthFit</ion-title>
+      <ion-title class="titulo">🏋🏿‍♂️HealthFit🏋🏻</ion-title>
     </ion-toolbar>
   </ion-header>
 </div> 
